[gd_scene load_steps=2 format=3 uid="uid://ejgapkchkigb"]

[ext_resource type="Script" uid="uid://e3s1f4maf5ii" path="res://Browser/Dialogs/TagManager/EditTagDialog.gd" id="1_26ujb"]

[node name="EditTagDialog" type="Window"]
size = Vector2i(400, 300)
script = ExtResource("1_26ujb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="Description" type="TextEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Name" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="hide"]
